# cv

./: .blog_server_pid  .devhub.yaml  .dockerignore  .dockerignore.improved  .env.local  .gitignore  .html-validaterc  .htmlvalidateignore  .prettierrc  .stylelintrc  BLOG_CMS_GUIDE.md  BLOG_WORKFLOW.md  CHANGES-CREDENTIALS.md  CHANGES-DB.md  CHANGES.md  CLAUDE.md  CLEANUP-SUMMARY.md  Cargo.toml  DATABASE.md  DEPLOYMENT.md  DEPLOYMENT_UPDATES.md  DEVELOPER_GUIDE.md  DOCKER_BUILD_FIX.md  DOCKER_BUILD_SYSTEM.md  Dockerfile  Dockerfile.improved  Dockerfile.local  Dockerfile.local.improved  FEATURES.md  GITHUB-TOKEN-SETUP.md  GIT_AUTH_DEPLOY_CHANGES.md  GIT_CMS_WORKFLOW.md  IMPLEMENTATION_ROADMAP.md  IMPROVEMENTS.md  IMPROVEMENT_PLAN.md  LICENSE  METRICS_IMPLEMENTATION.md  NETWORK_FIX_SUMMARY.md  PHASE2_SUMMARY.md  PHASE3_COMPLETION.md  (+45 more)
.cache/colorschemes/: Dracula-default.json  Rose Pine Dawn-default.json  Rose Pine Moon-default.json
.devhub/: AGENT_CONTEXT.md
.github/: settings.yml
.github/workflows/: ci.yml  ci.yml.improved  content-deploy.yml  deploy-blog-api.yml  deploy-blog-api.yml.improved  (+2 more)
cache/: github_cache.json
config/: site.json  site.test.json
data/: cv_data.json  cv_data.json.bak  github_cache.json  icon_mapping.json  language_icons.json  language_icons.json.backup
docker/: Dockerfile  Dockerfile.dev  Dockerfile.local  Dockerfile.minimal  Dockerfile.prod  README.md  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  reset_admin_password.sql  startup.sh
docs/: API_CLIENT_FIX.md  API_GUIDE.md  ARCHITECTURE.md  AUTHENTICATION.md  AUTHENTICATION_FIX.md  BACKUP_RESTORE.md  BLOG_CLIENT_IMPROVEMENTS.md  CLEANUP-PHASE4.md  CLEANUP.md  CONSOLIDATION_SUMMARY.md  CSS_ENHANCEMENTS.md  DEFAULT_USERS.md  DEPLOYMENT.md  DEPLOYMENT_CONSOLIDATED.md  DEPLOYMENT_FIXES.md  DOCKER_CLEANUP.md  DOCKER_DEPLOYMENT_FIXES.md  DOCKER_NETWORK_FIX.md  GITHUB_OAUTH_SETUP.md  GIT_BASED_AUTH.md  IMPLEMENTATION_SUMMARY.md  ISSUE_RESOLUTION.md  LOCAL_DEPLOYMENT_FIXES.md  MARKDOWN_EDITOR.md  PHASE1_SUMMARY.md  PHASE2_COMPLETION.md  PROJECT_HISTORY.md  QUICK_WINS.md  README.md  TECHNICAL_DECISIONS.md  TESTING_STRATEGY.md  USER_DOCUMENTATION.md  async_database_implementation.md  documentation.html
monitoring/: docker-compose.monitoring.yml
release/: .htaccess  _headers  _redirects  cv.html  index.html  manifest.json  projects.html  robots.txt  service-worker.js  style.css  web.config
scripts/: backup_database.sh  blog-list.sh  blog-new.sh  blog-preview.sh  blog-publish.sh  build-docker.sh  deploy-local.sh  deploy.sh  network-test.sh  optimize-build.sh  rebuild-docker.sh  restore_database.sh  setup_backup_cron.sh  test-deployment.sh  test.sh
src/: api_docs.rs  api_models.rs  asset_processor.rs  auth.rs  auth_middleware.rs  blog_api.rs  blog_api_test.rs  blog_converters.rs  blog_data.rs  blog_data_async.rs  blog_data_test.rs  blog_error.rs  blog_generator.rs  blog_manager_test.rs  blog_manager_test_async.rs  blog_posts.rs  blog_property_test.rs  blog_utils.rs  blog_validation.rs  bundler.rs  check_db_permissions.rs  colorscheme_provider.rs  colorscheme_provider.rs.old  config.rs  configuration.rs  content_security_policy.rs  cover_letter.rs  credentials.rs  csrf_protection.rs  css_generator.rs  cv_data.rs  cv_data_test.rs  db.rs  dependencies.rs  feature_flags.rs  feed.rs  git_config.rs  git_identity.rs  github.rs  github_cache.rs  (+25 more)
static/: admin.css  admin.js  blog-client.html  blog-debug.html  blog-test.html  blog.css  cors-test.html  cv.html  direct-api-test.html  index.html  minimal-blog-test.html  prism.css  prism.js  projects.html  simple-blog-client.html  style.css  test.txt
templates/: base.html  blog.html  blog_base.html  blog_list.html  blog_post.html  cv.html  index.html  page.html  projects.html  static_blog.html
test_data/: blog_test.db  blog_test.db-shm  blog_test.db-wal
tests/: blog_property_test.rs  github_test.rs  integration_test.rs
(+105 files in other folders)
